-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 14
-
Component/s: hotspot
-
b26
-
Verified
Test failed java/lang/invoke/CallSiteTest.java
----------System.err:(35/2261)----------
patching test/java/lang/invoke/CallSiteTest.runMutableCallSite()I
11:invokestatic 162 INDY_mcs()L;...; 18:invokevirtual 166 => invokedynamic 261:InvokeDynamic[0, 259]
patching test/java/lang/invoke/CallSiteTest.runVolatileCallSite()I
11:invokestatic 169 INDY_vcs()L;...; 18:invokevirtual 166 => invokedynamic 262:InvokeDynamic[1, 259]
java.lang.RuntimeException: java.lang.reflect.InvocationTargetException
at indify.Indify.run(Indify.java:130)
at indify.Indify.main(Indify.java:106)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:564)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:832)
Caused by: java.lang.reflect.InvocationTargetException
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:564)
at indify.Indify.runApplication(Indify.java:158)
at indify.Indify.run(Indify.java:127)
... 7 more
Caused by: java.lang.AssertionError: should not throw
at test.java.lang.invoke.CallSiteTest.test(CallSiteTest.java:88)
at test.java.lang.invoke.CallSiteTest.testConstantCallSite(CallSiteTest.java:131)
at test.java.lang.invoke.CallSiteTest.main(CallSiteTest.java:68)
... 13 more
Caused by: java.lang.IllegalStateException: uninitialized call site
at java.base/java.lang.invoke.CallSite.uninitializedCallSite(CallSite.java:261)
at test.java.lang.invoke.CallSiteTest.test(CallSiteTest.java:82)
... 15 more
----------System.err:(35/2261)----------
patching test/java/lang/invoke/CallSiteTest.runMutableCallSite()I
11:invokestatic 162 INDY_mcs()L;...; 18:invokevirtual 166 => invokedynamic 261:InvokeDynamic[0, 259]
patching test/java/lang/invoke/CallSiteTest.runVolatileCallSite()I
11:invokestatic 169 INDY_vcs()L;...; 18:invokevirtual 166 => invokedynamic 262:InvokeDynamic[1, 259]
java.lang.RuntimeException: java.lang.reflect.InvocationTargetException
at indify.Indify.run(Indify.java:130)
at indify.Indify.main(Indify.java:106)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:564)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:832)
Caused by: java.lang.reflect.InvocationTargetException
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:564)
at indify.Indify.runApplication(Indify.java:158)
at indify.Indify.run(Indify.java:127)
... 7 more
Caused by: java.lang.AssertionError: should not throw
at test.java.lang.invoke.CallSiteTest.test(CallSiteTest.java:88)
at test.java.lang.invoke.CallSiteTest.testConstantCallSite(CallSiteTest.java:131)
at test.java.lang.invoke.CallSiteTest.main(CallSiteTest.java:68)
... 13 more
Caused by: java.lang.IllegalStateException: uninitialized call site
at java.base/java.lang.invoke.CallSite.uninitializedCallSite(CallSite.java:261)
at test.java.lang.invoke.CallSiteTest.test(CallSiteTest.java:82)
... 15 more
- relates to
-
JDK-8234401 ConstantCallSite may stuck in non-frozen state
-
- Resolved
-
-
JDK-8236647 java/lang/invoke/CallSiteTest.java failed with InvocationTargetException in Graal mode
-
- Resolved
-