8234923: Missed call_site_target nmethod dependency for non-fully initialized ConstantCallSite instance

Reviewed-by: jrose